// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language static data Language data for AIN should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "ㇰ",
    "ㇱ",
    "ㇲ",
    "ㇳ",
    "ㇴ",
    "ㇵ",
    "ㇶ",
    "ㇷ",
    "ㇸ",
    "ㇹ",
    "ㇺ",
    "ㇻ",
    "ㇼ",
    "ㇽ",
    "ㇾ",
    "ㇿ",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": false,
  "iso": "AIN",
  "name": "Ainu",
}
`;

exports[`Language static data Language data for AR should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "ا",
    "ب",
    "ت",
    "ث",
    "ج",
    "ح",
    "خ",
    "د",
    "ذ",
    "ر",
    "ز",
    "س",
    "ش",
    "ص",
    "ض",
    "ط",
    "ظ",
    "ع",
    "غ",
    "ف",
    "ق",
    "ك",
    "ل",
    "م",
    "ن",
    "ه",
    "و",
    "ي",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "AR",
  "name": "Arabic",
}
`;

exports[`Language static data Language data for ASE should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "ASE",
  "name": "Asl",
}
`;

exports[`Language static data Language data for BS should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "BS",
  "name": "Bosnian",
}
`;

exports[`Language static data Language data for DA should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
    "å",
    "æ",
    "ø",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "DA",
  "name": "Danish",
}
`;

exports[`Language static data Language data for DE should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "DE",
  "name": "German",
}
`;

exports[`Language static data Language data for EL should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "α",
    "β",
    "γ",
    "δ",
    "ε",
    "ζ",
    "η",
    "θ",
    "ι",
    "κ",
    "λ",
    "μ",
    "ν",
    "ξ",
    "ο",
    "π",
    "ρ",
    "σ",
    "τ",
    "υ",
    "φ",
    "χ",
    "ψ",
    "ω",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": false,
  "iso": "EL",
  "name": "Greek",
}
`;

exports[`Language static data Language data for EN should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "EN",
  "name": "English",
}
`;

exports[`Language static data Language data for ENGB should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "ENGB",
  "name": "EnglishBritish",
}
`;

exports[`Language static data Language data for EO should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "EO",
  "name": "Esperanto",
}
`;

exports[`Language static data Language data for ES should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "ES",
  "name": "Spanish",
}
`;

exports[`Language static data Language data for ESMX should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "ESMX",
  "name": "SpanishMexican",
}
`;

exports[`Language static data Language data for ET should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "š",
    "z",
    "ž",
    "t",
    "u",
    "v",
    "w",
    "õ",
    "ä",
    "ö",
    "ü",
    "x",
    "y",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "ET",
  "name": "Estonian",
}
`;

exports[`Language static data Language data for FA should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "ا",
    "ب",
    "ت",
    "ث",
    "ج",
    "ح",
    "خ",
    "د",
    "ذ",
    "ر",
    "ز",
    "س",
    "ش",
    "ص",
    "ض",
    "ط",
    "ظ",
    "ع",
    "غ",
    "ف",
    "ق",
    "ك",
    "ل",
    "م",
    "ن",
    "ه",
    "و",
    "ي",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": false,
  "iso": "FA",
  "name": "Persian",
}
`;

exports[`Language static data Language data for FI should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "FI",
  "name": "Finnish",
}
`;

exports[`Language static data Language data for FR should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "FR",
  "name": "French",
}
`;

exports[`Language static data Language data for HAW should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "HAW",
  "name": "Hawaiian",
}
`;

exports[`Language static data Language data for HE should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "א",
    "בּ",
    "ב",
    "ג",
    "ד",
    "ה",
    "ו",
    "ז",
    "ח",
    "ט",
    "י",
    "ך",
    "כּ",
    "כ",
    "ךּ",
    "ל",
    "מ",
    "ם",
    "נ",
    "ן",
    "ס",
    "ע",
    "פּ",
    "פ",
    "ף",
    "צ",
    "ץ",
    "ק",
    "שׂ",
    "תּ",
    "שׁ",
    "ר",
    "ת",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": true,
  "hasRomanAid": true,
  "isUiLocalized": false,
  "iso": "HE",
  "name": "Hebrew",
}
`;

exports[`Language static data Language data for HI should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "अ",
    "आ",
    "ए",
    "ई",
    "ऍ",
    "ऎ",
    "इ",
    "ओ",
    "ऑ",
    "ऊ",
    "औ",
    "उ",
    "ब",
    "भ",
    "च",
    "छ",
    "ड",
    "फ",
    "फ़",
    "ग",
    "घ",
    "ग़",
    "ह",
    "झ",
    "क",
    "ख",
    "ल",
    "ळ",
    "ऌ",
    "ॡ",
    "म",
    "न",
    "ङ",
    "ञ",
    "ण",
    "ऩ",
    "ॐ",
    "क़",
    "र",
    "ऋ",
    "ऱ",
    "स",
    "श",
    "ष",
    "ट",
    "त",
    "ठ",
    "थ",
    "ध",
    "ड़",
    "व",
    "य",
    "ज़",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "HI",
  "name": "Hindi",
}
`;

exports[`Language static data Language data for HR should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "HR",
  "name": "Croatian",
}
`;

exports[`Language static data Language data for HU should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "HU",
  "name": "Hungarian",
}
`;

exports[`Language static data Language data for IC should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
    "á",
    "ð",
    "é",
    "í",
    "ó",
    "ú",
    "ý",
    "þ",
    "æ",
    "ö",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "IC",
  "name": "Icelandic",
}
`;

exports[`Language static data Language data for ID should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "ID",
  "name": "Indonesian",
}
`;

exports[`Language static data Language data for IT should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "IT",
  "name": "Italian",
}
`;

exports[`Language static data Language data for JP should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "あ",
    "い",
    "う",
    "え",
    "お",
    "か",
    "き",
    "く",
    "け",
    "こ",
    "さ",
    "s",
    "し",
    "す",
    "せ",
    "そ",
    "た",
    "ち",
    "つ",
    "て",
    "と",
    "な",
    "に",
    "ぬ",
    "ね",
    "の",
    "は",
    "ひ",
    "ふ",
    "へ",
    "ほ",
    "ま",
    "み",
    "む",
    "め",
    "も",
    "ら",
    "り",
    "る",
    "れ",
    "ろ",
    "わ",
    "を",
    "ん",
    "が",
    "ぎ",
    "ぐ",
    "げ",
    "ご",
    "ざ",
    "じ",
    "ず",
    "ぜ",
    "ぞ",
    "だ",
    "ぢ",
    "づ",
    "で",
    "ど",
    "ば",
    "び",
    "ぶ",
    "べ",
    "ぼ",
    "ぱ",
    "ぴ",
    "ぷ",
    "ぺ",
    "ぽ",
    "や",
    "ゆ",
    "よ",
  ],
  "alternativeAlphabet": Array [
    "ア",
    "イ",
    "ウ",
    "エ",
    "オ",
    "カ",
    "キ",
    "ク",
    "ケ",
    "コ",
    "サ",
    "シ",
    "ス",
    "セ",
    "ソ",
    "タ",
    "チ",
    "ツ",
    "テ",
    "ト",
    "ナ",
    "ニ",
    "ヌ",
    "ネ",
    "ノ",
    "ハ",
    "ヒ",
    "フ",
    "ヘ",
    "ホ",
    "マ",
    "ミ",
    "ム",
    "メ",
    "モ",
    "ヤ",
    "ユ",
    "ヨ",
    "ラ",
    "リ",
    "ル",
    "レ",
    "ロ",
    "ワ",
    "ヲ",
    "ン",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": true,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "JP",
  "name": "Japanese",
}
`;

exports[`Language static data Language data for KO should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "것",
    "하",
    "다",
    "있",
    "다",
    "수",
    "하",
    "다",
    "나",
    "없",
    "다",
    "않",
    "다",
    "사",
    "람",
    "우",
    "리",
    "그",
    "아",
    "니",
    "다",
    "보",
    "다",
    "거",
    "보",
    "다",
    "같",
    "다",
    "주",
    "다",
    "대",
    "하",
    "다",
    "가",
    "다",
    "년",
    "한",
    "말",
    "일",
    "이",
    "말",
    "하",
    "다",
    "위",
    "하",
    "다",
    "그",
    "러",
    "나",
    "오",
    "다",
    "알",
    "다",
    "씨",
    "그",
    "렇",
    "다",
    "크",
    "다",
    "일",
    "사",
    "회",
    "많",
    "다",
    "안",
    "좋",
    "다",
    "더",
    "받",
    "다",
    "그",
    "것",
    "집",
    "나",
    "오",
    "다",
    "그",
    "리",
    "고",
    "문",
    "제",
    "그",
    "런",
    "살",
    "다",
    "저",
    "못",
    "하",
    "다",
    "생",
    "각",
    "하",
    "다",
    "모",
    "르",
    "다",
    "속",
    "만",
    "들",
    "다",
    "데",
    "앞",
    "경",
    "우",
    "중",
    "어",
    "떤",
    "잘",
    "그",
    "녀",
    "먹",
    "다",
    "자",
    "신",
    "문",
    "화",
    "원",
    "생",
    "각",
    "어",
    "떻",
    "다",
    "명",
    "통",
    "하",
    "다",
    "그",
    "러",
    "다",
    "그",
    "러",
    "다",
    "소",
    "리",
    "다",
    "시",
    "다",
    "른",
    "이",
    "런",
    "여",
    "자",
    "개",
    "정",
    "도",
    "다",
    "좀",
    "싶",
    "다",
    "보",
    "이",
    "다",
    "가",
    "지",
    "다",
    "함",
    "께",
    "아",
    "이",
    "지",
    "나",
    "다",
    "많",
    "이",
    "시",
    "간",
    "너",
    "인",
    "간",
    "사",
    "실",
    "나",
    "다",
    "이",
    "렇",
    "다",
    "어",
    "머",
    "니",
    "눈",
    "뭐",
    "점",
    "의",
    "하",
    "다",
    "시",
    "대",
    "다",
    "음",
    "이",
    "러",
    "하",
    "다",
    "누",
    "구",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "KO",
  "name": "Korean",
}
`;

exports[`Language static data Language data for MI should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "e",
    "h",
    "i",
    "k",
    "m",
    "n",
    "ng",
    "o",
    "p",
    "r",
    "t",
    "u",
    "w",
    "wh",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "MI",
  "name": "Maori",
}
`;

exports[`Language static data Language data for NL should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "NL",
  "name": "Dutch",
}
`;

exports[`Language static data Language data for NO should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
    "æ",
    "ø",
    "å",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "NO",
  "name": "Norwegian",
}
`;

exports[`Language static data Language data for PA should match snapshot 1`] = `
Object {
  "alphabet": Array [],
  "availableAsLearning": false,
  "availableAsNative": false,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": false,
  "iso": "PA",
  "name": "Punjabi",
}
`;

exports[`Language static data Language data for PL should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "PL",
  "name": "Polish",
}
`;

exports[`Language static data Language data for PT should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "PT",
  "name": "Portuguese",
}
`;

exports[`Language static data Language data for PTPT should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "PTPT",
  "name": "PortugueseEuropean",
}
`;

exports[`Language static data Language data for RU should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "а",
    "б",
    "в",
    "г",
    "д",
    "е",
    "ё",
    "ж",
    "з",
    "и",
    "й",
    "к",
    "л",
    "м",
    "н",
    "о",
    "п",
    "р",
    "с",
    "т",
    "у",
    "ф",
    "х",
    "ц",
    "ч",
    "ш",
    "щ",
    "ъ",
    "ы",
    "ь",
    "э",
    "ю",
    "я",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "RU",
  "name": "Russian",
}
`;

exports[`Language static data Language data for SM should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "e",
    "i",
    "o",
    "u",
    "f",
    "g",
    "l",
    "m",
    "n",
    "p",
    "s",
    "t",
    "v",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "SM",
  "name": "Samoan",
}
`;

exports[`Language static data Language data for SR should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "а",
    "б",
    "в",
    "г",
    "д",
    "ђ",
    "е",
    "ж",
    "з",
    "и",
    "ј",
    "к",
    "л",
    "љ",
    "м",
    "н",
    "њ",
    "о",
    "п",
    "р",
    "с",
    "т",
    "ћ",
    "у",
    "ф",
    "х",
    "ц",
    "ч",
    "џ",
    "ш",
  ],
  "availableAsLearning": true,
  "availableAsNative": false,
  "availableInVisualDictionary": false,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": false,
  "iso": "SR",
  "name": "Serbian",
}
`;

exports[`Language static data Language data for SV should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
    "å",
    "ä",
    "ö",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "SV",
  "name": "Swedish",
}
`;

exports[`Language static data Language data for TH should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "ก",
    "ข",
    "ฃ",
    "ค",
    "ฅ",
    "ฆ",
    "ง",
    "จ",
    "ฉ",
    "ช",
    "ซ",
    "ฌ",
    "ญ",
    "ฎ",
    "ฏ",
    "ฐ",
    "ฑ",
    "ฒ",
    "ณ",
    "ด",
    "ต",
    "ถ",
    "ท",
    "ธ",
    "น",
    "บ",
    "ป",
    "ผ",
    "ฝ",
    "พ",
    "ฟ",
    "ภ",
    "ม",
    "ย",
    "ร",
    "ล",
    "ว",
    "ศ",
    "ษ",
    "ส",
    "ห",
    "ฬ",
    "อ",
    "ฮ",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": false,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "TH",
  "name": "Thai",
}
`;

exports[`Language static data Language data for TL should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "ñ",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "w",
    "x",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": false,
  "iso": "TL",
  "name": "Tagalog",
}
`;

exports[`Language static data Language data for TR should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "ç",
    "d",
    "e",
    "f",
    "g",
    "ğ",
    "h",
    "ı",
    "i",
    "j",
    "k",
    "l",
    "m",
    "n",
    "o",
    "ö",
    "p",
    "r",
    "s",
    "ş",
    "t",
    "u",
    "ü",
    "v",
    "y",
    "z",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "TR",
  "name": "Turkish",
}
`;

exports[`Language static data Language data for VI should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "a",
    "b",
    "c",
    "d",
    "e",
    "g",
    "h",
    "i",
    "k",
    "l",
    "m",
    "n",
    "o",
    "p",
    "q",
    "r",
    "s",
    "t",
    "u",
    "v",
    "x",
    "y",
    "ô",
    "ơ",
    "â",
    "ă",
    "ê",
    "ư",
    "đ",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": false,
  "hasRomanAid": false,
  "isUiLocalized": true,
  "iso": "VI",
  "name": "Vietnamese",
}
`;

exports[`Language static data Language data for ZH should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "的",
    "壹",
    "是",
    "不",
    "了",
    "人",
    "我",
    "在",
    "有",
    "他",
    "这",
    "中",
    "大",
    "来",
    "上",
    "国",
    "个",
    "到",
    "说",
    "们",
    "为",
    "子",
    "和",
    "你",
    "地",
    "出",
    "道",
    "也",
    "时",
    "年",
    "得",
    "就",
    "那",
    "要",
    "下",
    "以",
    "生",
    "会",
    "自",
    "着",
    "去",
    "之",
    "过",
    "家",
    "学",
    "对",
    "可",
    "她",
    "里",
    "后",
    "小",
    "么",
    "心",
    "多",
    "天",
    "而",
    "能",
    "好",
    "都",
    "然",
    "没",
    "日",
    "于",
    "起",
    "还",
    "发",
    "成",
    "事",
    "只",
    "作",
    "当",
    "想",
    "看",
    "文",
    "无",
  ],
  "alternativeAlphabet": Array [
    "的",
    "壹",
    "是",
    "不",
    "了",
    "人",
    "我",
    "在",
    "有",
    "他",
    "這",
    "中",
    "大",
    "來",
    "上",
    "國",
    "個",
    "到",
    "說",
    "們",
    "為",
    "子",
    "和",
    "你",
    "地",
    "出",
    "道",
    "也",
    "時",
    "年",
    "得",
    "就",
    "那",
    "要",
    "下",
    "以",
    "生",
    "會",
    "自",
    "著",
    "去",
    "之",
    "過",
    "家",
    "學",
    "對",
    "可",
    "她",
    "里",
    "後",
    "小",
    "麼",
    "心",
    "多",
    "天",
    "而",
    "能",
    "好",
    "都",
    "然",
    "沒",
    "日",
    "於",
    "起",
    "還",
    "發",
    "成",
    "事",
    "只",
    "作",
    "當",
    "想",
    "看",
    "文",
    "無",
    "(",
    "開",
    "手",
    "十",
    "用",
    "主",
    "行",
    "方",
    "又",
    "如",
    "前",
    "所",
    "本",
    "見",
    "經",
    "頭",
    "面",
    "公",
    "同",
    "三",
    "已",
    "老",
    "從",
    "動",
    "兩",
    "長",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": true,
  "hasAlternativeTranslation": true,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "ZH",
  "name": "Chinese",
}
`;

exports[`Language static data Language data for ZHYUE should match snapshot 1`] = `
Object {
  "alphabet": Array [
    "的",
    "壹",
    "是",
    "不",
    "了",
    "人",
    "我",
    "在",
    "有",
    "他",
    "这",
    "中",
    "大",
    "来",
    "上",
    "国",
    "个",
    "到",
    "说",
    "们",
    "为",
    "子",
    "和",
    "你",
    "地",
    "出",
    "道",
    "也",
    "时",
    "年",
    "得",
    "就",
    "那",
    "要",
    "下",
    "以",
    "生",
    "会",
    "自",
    "着",
    "去",
    "之",
    "过",
    "家",
    "学",
    "对",
    "可",
    "她",
    "里",
    "后",
    "小",
    "么",
    "心",
    "多",
    "天",
    "而",
    "能",
    "好",
    "都",
    "然",
    "没",
    "日",
    "于",
    "起",
    "还",
    "发",
    "成",
    "事",
    "只",
    "作",
    "当",
    "想",
    "看",
    "文",
    "无",
  ],
  "availableAsLearning": true,
  "availableAsNative": true,
  "availableInVisualDictionary": true,
  "hasAlphabetTopic": false,
  "hasAlternativeTranslation": true,
  "hasRomanAid": true,
  "isUiLocalized": true,
  "iso": "ZHYUE",
  "name": "ChineseCantonese",
}
`;
